--- a/css/styles.css
+++ b/css/styles.css
@@ -31,12 +31,22 @@ body {
 }
   
 /* INDEX */
-.container-fluid {
+.container {
     justify-content: center;
-    display: flex;
     gap: 0rem;
-    margin: 1,5rem 1,5rem;
+    margin: 1,5rem;
     margin-top: 2%;
+}
+.img-full-width {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+}
+.img-full-width {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
 .destacado {
     font-size: 4rem;
@@ -60,15 +70,14 @@ body {
     object-fit: cover;
 }
 .carousel-caption {
-    background-color: rgba(114, 114, 114, 0.5);
-    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.4); /* más oscuro, más contraste */
+    padding: 1rem 1.5rem;
     border-radius: 10px;
-}
-.carousel-caption p {
-    font-size: 20px;
-    color: #000000;
+    font-size: 1.2rem;
+    color: #fff;
+    font-weight: 500;
+    text-align: center;
     font-family: "Special Gothic Expanded One", sans-serif;
-    font-weight: 600;
 }
 .carousel-indicators [data-bs-target] {
     background-color: #bbb;
@@ -88,7 +97,24 @@ body {
     padding: 15px;
     border-radius: 50%;
 }
-
+@media (max-width: 768px) {
+    #carouselExampleCaptions {
+      max-width: 95%;
+      margin: 20px auto;
+      border-radius: 15px;
+    }
+  
+    .carousel-inner img {
+      height: 220px;
+      object-fit: cover;
+    }
+  
+    .carousel-caption {
+      font-size: 0.85rem;
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+}
 .publicidad-final {
     text-align: start;
     padding: 2rem;
